trying to fix small display on small screens

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,7 +1,3 @@
-body{
-	padding-top: 65px;
-}
-
 input[type="text"],
 input[type="password"],
 textarea,
@@ -48,13 +44,11 @@ textarea:-ms-input-placeholder, textarea.form-control:-ms-input-placeholder { co
 input[type="text"]::-webkit-input-placeholder, input[type="password"]::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeholder { color: #888; }
 
+.navbar-static-top{
+	margin-bottom: 20px;
+}
 .navbar-brand{
 	padding: 10px;
-}
-
-.page-scroll{
-	margin-right: 15px;
-	height: 100%;
 }
 
 .page-scroll > img{
